fix: remove hidden overflow

--- a/src/frontend/app/globals.css
+++ b/src/frontend/app/globals.css
@@ -20,7 +20,6 @@ body {
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
   height: 100vh;
   margin: 0;
-  overflow: hidden;
 }
 
 h1, h2, h3 {
